swim_common/src/form/tests/derive/form/incorrect_rename_type.stderr
error: Expected a string literal
  --> $DIR/incorrect_rename_type.rs:20:23
   |
20 |         #[form(name = 13)]
   |                       ^^
